Shopping Basket Button Changed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,6 +120,12 @@ body {
 		cursor: pointer;
 	}
 
+	.badge {
+		position: absolute;
+		top: 40px;
+		left: 100px;
+	}
+
 /*---------------------------------------------------------------
 						Media Queries
 ---------------------------------------------------------------*/
