--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,6 +100,7 @@ body {
 		bottom: 10px;
 		width: 40px;
 		height: 40px;
+		cursor: pointer;
 	}
 
 	.isotope .item button.btninfo {
@@ -109,6 +110,21 @@ body {
 		font-size: 1.3em;
 		width: 40px;
 		height: 40px;
+	}
+
+	.item div.myspinner img {
+		width: 80%;
+		height: 55%;
+	}
+
+	.item div.myspinner {
+		height: 40px;
+		position: absolute;
+		left: 10px;
+		bottom: 10px;
+		width: 40px;
+		display: none;
+		padding-top: 8px;
 	}
 
 
@@ -124,6 +140,23 @@ body {
 		position: absolute;
 		top: 40px;
 		left: 100px;
+	}
+
+	.customSpinner {
+		position: absolute;
+		left: 0px;
+		top: 0px;
+		height: 100%;
+		width: 100%;
+		border-radius: 4px;
+		background-color: rgba(255, 255, 255, 0.8);
+		display: none;
+	}
+
+	.customSpinner img {
+		position: absolute;
+		left: 50%;
+		top: 50%;
 	}
 
 /*---------------------------------------------------------------
