--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -174,6 +174,22 @@ body {
 		font-size: 20px;
 	}
 
+
+/*---------------------------------------------------------------
+							Posts Page
+---------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
 /*---------------------------------------------------------------
 						Media Queries
 ---------------------------------------------------------------*/
