--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -62,6 +62,10 @@
 	border-radius: 3px 3px 0 0;
 }
 
+.md-content div.cartContent h3 {
+	
+}
+
 .md-content > div {
 	padding: 15px 40px 30px;
 	margin: 0;
