--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -67,7 +67,7 @@
 }
 
 .md-content > div {
-	padding: 15px 40px 30px;
+	padding: 25px;
 	margin: 0;
 	font-weight: 300;
 	font-size: 1.15em;
@@ -124,6 +124,9 @@
 
 .md-trigger  i{
 	margin-top: 7px;
+	font-size: 26px;
+	left: 26px;
+	position: absolute;
 }
 
 .md-trigger {
