--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -196,6 +196,7 @@ body {
 		margin: 7px;
 		background-color: #EEE;
 		border-radius: 7px;
+		border: 1px solid #ccc;
 	}
 
 	.isotope .item .postimg {
@@ -247,23 +248,24 @@ body {
 		opacity: 1;
 	}
 
-	#filters li button {
-		border: 0;
-		border-radius: 4px;
-		background-color:#4B4B4D;
-		padding: 5px 10px;
-		color: #fff;
+	#filters {
+		margin-bottom: 20px;
 	}
 
-	#filters li button:hover {
-		background-color: rgb(198, 52, 55);
-		padding: 5px 10px;
-		color: #fff;
+	#filters button {
+		width: 90px;
 	}
 
-	.is-checked {
-		background-color: rgb(198, 52, 55) !important;
+	#filters button:first-child {
+		border-top-right-radius: 4px;
+		border-bottom-right-radius: 4px;
 	}
+
+	#filters button:last-child {
+		border-top-left-radius: 4px;
+		border-bottom-left-radius: 4px;
+	}
+
 
 /*---------------------------------------------------------------
 							Loader
@@ -402,6 +404,38 @@ body {
 /*---------------------------------------------------------------
 						Posts Page
 ---------------------------------------------------------------*/
+
+	.page-header {
+	    margin: 0;
+	    color: orange;
+	    position: relative;
+	    padding: 15px 0 0 10px;
+	    background-color: #f5f5f5;
+	    border-top-right-radius: 4px;
+	    border-top-left-radius: 4px;
+	}
+	.page-header h1 {
+		position: relative;
+		top: 2px;
+		font-size: 1.3em;
+		display: inline-block;
+		border-bottom: 3px solid #C63437;
+		margin: 0;
+		padding: 0 20px 15px 20px;
+		color: #555;
+	}
+	.page-header span.fa {
+		position: absolute;
+		top: 48px;
+		right: -7px;
+		cursor: default;
+		color: #C63437;
+	}
+	
+	.page-content{
+		padding: 20px;
+		border: 1px solid #eee;
+	}
 
 	input,
 	textarea,
