--- a/public/css/pkala.css
+++ b/public/css/pkala.css
@@ -5,7 +5,7 @@ body {
 }
 
 /*---------------------------------------------------------------
-							Constants
+						Constants
 ---------------------------------------------------------------*/
 	@font-face {
 	    font-family:"yekan";
@@ -185,7 +185,7 @@ body {
 	}
 
 /*---------------------------------------------------------------
-							Products
+						Products
 ---------------------------------------------------------------*/
 
 	.isotope {}
@@ -197,6 +197,7 @@ body {
 		background-color: #EEE;
 		border-radius: 7px;
 		border: 1px solid #ccc;
+		float: left;
 	}
 
 	.isotope .item .postimg {
@@ -266,46 +267,44 @@ body {
 		border-bottom-left-radius: 4px;
 	}
 
-
 /*---------------------------------------------------------------
-							Loader
+						Loader
 ---------------------------------------------------------------*/
 
-.myspinner {
-	position: absolute;
-	left: 12px;
-	bottom: 29px;
-	display: none;
-}
+	.myspinner {
+		position: absolute;
+		left: 12px;
+		bottom: 29px;
+		display: none;
+	}
 
-.double-bounce1 {
-	width: 17px;
-	height: 17px;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.8;
-	position: absolute;
-	top: 0;
-	left: 0;
-	-webkit-animation: sk-bounce 1.0s infinite ease-in-out;
-	animation: sk-bounce 1.0s infinite ease-in-out;
-}
+	.double-bounce1 {
+		width: 17px;
+		height: 17px;
+		border-radius: 50%;
+		background-color: #fff;
+		opacity: 0.8;
+		position: absolute;
+		top: 0;
+		left: 0;
+		-webkit-animation: sk-bounce 1.0s infinite ease-in-out;
+		animation: sk-bounce 1.0s infinite ease-in-out;
+	}
 
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
-}
+	@-webkit-keyframes sk-bounce {
+	  0%, 100% { -webkit-transform: scale(0.0) }
+	  50% { -webkit-transform: scale(1.0) }
+	}
 
-@keyframes sk-bounce {
-  0%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-  }
-}
-
+	@keyframes sk-bounce {
+	  0%, 100% { 
+	    transform: scale(0.0);
+	    -webkit-transform: scale(0.0);
+	  } 50% { 
+	    transform: scale(1.0);
+	    -webkit-transform: scale(1.0);
+	  }
+	}
 
 /*---------------------------------------------------------------
 						Cart Page
@@ -349,11 +348,146 @@ body {
 		margin-right: 5px;
 	}
 
-
 /*---------------------------------------------------------------
 						Cart Modal
 ---------------------------------------------------------------*/
 
+	.md-modal {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		width: 50%;
+		max-width: 630px;
+		min-width: 320px;
+		height: auto;
+		z-index: 2000;
+		visibility: hidden;
+		-webkit-backface-visibility: hidden;
+		-moz-backface-visibility: hidden;
+		backface-visibility: hidden;
+		-webkit-transform: translateX(-50%) translateY(-50%);
+		-moz-transform: translateX(-50%) translateY(-50%);
+		-ms-transform: translateX(-50%) translateY(-50%);
+		transform: translateX(-50%) translateY(-50%);
+	}
+
+	.md-show {
+		visibility: visible;
+	}
+
+	.md-overlay {
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		visibility: hidden;
+		top: 0;
+		left: 0;
+		z-index: 1000;
+		opacity: 0;
+		background: rgba(0,0,0,0.7);
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		transition: all 0.3s;
+	}
+
+	.md-show ~ .md-overlay {
+		opacity: 1;
+		visibility: visible;
+	}
+
+	/* Content styles */
+	.md-content {
+		background-color: #FFF;
+		position: relative;
+		border-radius: 3px;
+		margin: 0 auto;
+	}
+
+	.md-content h3 {
+		margin: 0;
+		padding: 0.4em;
+		text-align: center;
+		font-size: 2.4em;
+		font-weight: 300;
+		opacity: 0.8;
+		background: #C63437;
+		color: #fff;
+		border-radius: 3px 3px 0 0;
+	}
+
+	.md-content > div {
+		padding: 25px;
+		margin: 0;
+		font-weight: 300;
+		font-size: 1.15em;
+		min-height: 300px;
+	}
+
+	.md-content > div p {
+		margin: 0;
+		padding: 10px 0;
+	}
+
+	.md-content > div ul {
+		margin: 0;
+		padding: 0 0 30px 20px;
+	}
+
+	.md-content > div ul li {
+		padding: 5px 0;
+	}
+
+	.md-content button {
+		margin: 0 auto;
+		font-size: 1em;
+	}
+
+
+	.md-effect-8.md-modal {
+		-webkit-perspective: 1300px;
+		-moz-perspective: 1300px;
+		perspective: 1300px;
+	}
+
+	.md-effect-8 .md-content {
+		-webkit-transform-style: preserve-3d;
+		-moz-transform-style: preserve-3d;
+		transform-style: preserve-3d;
+		-webkit-transform: rotateY(-70deg);
+		-moz-transform: rotateY(-70deg);
+		-ms-transform: rotateY(-70deg);
+		transform: rotateY(-70deg);
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		transition: all 0.3s;
+		opacity: 0;
+	}
+
+	.md-show.md-effect-8 .md-content {
+		-webkit-transform: rotateY(0deg);
+		-moz-transform: rotateY(0deg);
+		-ms-transform: rotateY(0deg);
+		transform: rotateY(0deg);
+		opacity: 1;
+	}
+
+	.md-trigger  i{
+		margin-top: 7px;
+		font-size: 26px;
+		left: 26px;
+		position: absolute;
+	}
+
+	.md-trigger {
+		font-size: 26px;
+		margin-top: -1px;
+		border-radius: 0px;
+		width: 80px;
+		height: 51px;
+		position: absolute;
+		left: 20px;
+	}
+	
 	.btnrem {
 		cursor: pointer;
 		color: #C63437;
@@ -399,7 +533,6 @@ body {
 		font-weight: bold;
 		font-size: 20px;
 	}
-
 
 /*---------------------------------------------------------------
 						Posts Page
@@ -483,7 +616,6 @@ body {
 	    border-color: #AD2D30;
 	    background-color: #C63437;
 	}
-
 
 /*---------------------------------------------------------------
 						Media Queries
