--- a/public/css/pkala.css
+++ b/public/css/pkala.css
@@ -267,6 +267,62 @@ body {
 		border-bottom-left-radius: 4px;
 	}
 
+	/*--- Stepper ---*/
+	.stepper-wrap {
+	    position: relative;
+	    display: inline-block;
+	    /*font-size: 1em;*/
+	}
+
+	.stepper-wrap input {
+	    text-align: right;
+	    padding: 0px 5px 2px 5px !important;
+	    font-size: 0.9em !important;
+	    border: 1px solid #ccc;
+	}
+
+	.stepper-btn-wrap {
+	    position: absolute;
+	    top: 0;
+	    right: -15px;
+	    width: 15px;
+	    height: 100%;
+	    overflow: hidden;
+	    border: 1px solid #ccc;
+	    border-left: 0;
+	    -webkit-border-radius: 0 3px 3px 0;
+	       -moz-border-radius: 0 3px 3px 0;
+	            border-radius: 0 3px 3px 0;
+	}
+
+	.stepper-btn-wrap a {
+	    display: block;
+	    height: 50%;
+	    overflow: hidden;
+	    line-height: 100%;
+	    text-align: center;
+	    text-decoration: none;
+	    text-shadow: 1px 1px 0 #fff;
+	    cursor: default;
+	    color: #666;
+
+	    /* Box Sizing */
+	    -webkit-box-sizing: border-box;
+	    -moz-box-sizing: border-box;
+	    box-sizing: border-box;
+	}
+
+	.stepper-btn-wrap a:hover {
+	    background: rgba(255, 255, 255, 0.5);
+	}
+
+	select.vahed {
+		padding: 0 !important;
+		font-size: 0.9em !important;
+		position: relative;
+		top: 1px;
+	}
+
 /*---------------------------------------------------------------
 						Loader
 ---------------------------------------------------------------*/
