--- a/public/css/pkala.css
+++ b/public/css/pkala.css
@@ -223,8 +223,8 @@ body {
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		position: absolute;
-		bottom: 9px;
-		padding-right: 6px;
+		bottom: 5px;
+		padding-right: 7px;
 	}
 
 	.isotope .item button.btnadd {
@@ -275,10 +275,13 @@ body {
 	}
 
 	.stepper-wrap input {
-	    text-align: right;
-	    padding: 0px 5px 2px 5px !important;
+	    text-align: center;
+	    padding: 2px 7px 4px 7px !important;
 	    font-size: 0.9em !important;
 	    border: 1px solid #ccc;
+	    border-left: 1px dashed #ccc;
+	    border-top-left-radius: 6px;
+	    border-bottom-left-radius: 6px;
 	}
 
 	.stepper-btn-wrap {
@@ -290,9 +293,9 @@ body {
 	    overflow: hidden;
 	    border: 1px solid #ccc;
 	    border-left: 0;
-	    -webkit-border-radius: 0 3px 3px 0;
-	       -moz-border-radius: 0 3px 3px 0;
-	            border-radius: 0 3px 3px 0;
+	    -webkit-border-radius: 0 4px 4px 0;
+	       -moz-border-radius: 0 4px 4px 0;
+	            border-radius: 0 4px 4px 0;
 	}
 
 	.stepper-btn-wrap a {
@@ -305,6 +308,7 @@ body {
 	    text-shadow: 1px 1px 0 #fff;
 	    cursor: default;
 	    color: #666;
+	    padding-top: 1px;
 
 	    /* Box Sizing */
 	    -webkit-box-sizing: border-box;
@@ -316,12 +320,35 @@ body {
 	    background: rgba(255, 255, 255, 0.5);
 	}
 
-	select.vahed {
-		padding: 0 !important;
-		font-size: 0.9em !important;
-		position: relative;
-		top: 1px;
+	.select-style {
+	    padding: 0;
+	    margin: 0;
+	    border: 1px solid #ccc;
+	    border-radius: 6px;
+	    overflow: hidden;
+	    background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 13% 50%;
+	    font-size: 0.9em;
+	    display: inline-block;
+	    vertical-align: bottom;
+	    margin-right: -4px;
+	    border-right: 0;
 	}
+
+	.select-style select {
+	    padding: 0px 8px 0px 25px !important;
+	    border: none;
+	    box-shadow: none;
+	    background-color: transparent;
+	    background-image: none;
+	    -webkit-appearance: none;
+	    -moz-appearance: none;
+	    appearance: none;
+	}
+
+	.select-style select:focus {
+	    outline: none;
+	}
+
 
 /*---------------------------------------------------------------
 						Loader
