--- a/public/css/pkala.css
+++ b/public/css/pkala.css
@@ -205,6 +205,17 @@ body {
 		overflow: hidden;
 	}
 
+	.isotope .item .postimg span {
+		position: absolute;
+		color: #fff;
+		width: 100%;
+		text-align: center;
+		z-index: 1;
+		padding: 5px;
+		bottom: 40px;
+		background-color: rgba(51, 51, 51, 0.5);
+	}
+
 	.isotope .item .postimg img {
 		width: 100%;
 		margin: 0 auto;
@@ -304,13 +315,9 @@ body {
 	    overflow: hidden;
 	    line-height: 100%;
 	    text-align: center;
-	    text-decoration: none;
-	    text-shadow: 1px 1px 0 #fff;
 	    cursor: default;
 	    color: #666;
 	    padding-top: 1px;
-
-	    /* Box Sizing */
 	    -webkit-box-sizing: border-box;
 	    -moz-box-sizing: border-box;
 	    box-sizing: border-box;
@@ -348,7 +355,6 @@ body {
 	.select-style select:focus {
 	    outline: none;
 	}
-
 
 /*---------------------------------------------------------------
 						Loader
@@ -445,6 +451,15 @@ body {
 
 	.panel-body button.btnaddaddress {
 
+	}
+
+	td.totalSum {
+		font-size: 12px;
+	}
+
+	td.finalSum {
+		font-size: 16px;
+		font-weight: bold;
 	}
 
 /*---------------------------------------------------------------
