--- a/public/css/pkala.css
+++ b/public/css/pkala.css
@@ -357,6 +357,33 @@ body {
 	}
 
 /*---------------------------------------------------------------
+						Add Product
+---------------------------------------------------------------*/
+	.catunits div {
+		background-color: rgb(238, 238, 238);
+		padding: 5px;
+		border-radius: 4px;
+		display: inline-block;
+		margin-left: 3px;
+	}
+
+	.catunits div input {
+		font-size: 1em;
+		padding: 2px 5px !important;
+		border-radius: 4px;
+		border: 1px solid rgb(204, 204, 204);
+		margin-right: 5px;
+	}
+
+	.catunits div small {
+		margin-right: 3px;
+	}
+
+	.catunits button i {
+		padding-top: 7px;
+	}
+
+/*---------------------------------------------------------------
 						Loader
 ---------------------------------------------------------------*/
 
